# quote-bot

./: Cargo.toml
migrations/: 20220313163309_quotes.sql
src/: lib.rs  main.rs
